<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="WindSpeed">Wind Speed</string>
    <string name="Humidity">Humidity</string>
    <string name="Pressure">Pressure</string>
    <string name="Cloud">Cloud</string>
    <string name="HourlyForecast">Hourly Forecast</string>
    <string name="DailyForecast">Daily Forecast</string>
    <string name="Tomorrow">Tomorrow</string>

    <string name="InitialSetup">Initial Setup</string>
    <string name="Location">Location</string>
    <string name="Language">Language</string>
    <string name="Notification">Allow Notifications</string>
    <string name="Ok">Ok</string>
    <string name="AllowPermissions">Allow Location</string>
    <string name="Allow">Allow</string>
    <string name="AllowPermText">"Please allow the app to access your location."</string>
    <string name="EnableLocation">Enable Location</string>
    <string name="EnableLocationText">Please enable location to use the service.</string>
    <string name="Enable">Enable</string>
    <string name="SearchForLocation">Search for location</string>
    <string name="AddToFavText">Add this location to your favorites?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="UpdateHomeLocationText">Set the main location to this one?</string>
    <string name="Home">Home</string>
    <string name="Favorites">Favorites</string>
    <string name="Alerts">Alerts</string>
    <string name="Settings">Settings</string>
    <string name="Notifications">Notifications</string>
    <string name="Celsius">Celsius</string>
    <string name="Kelvin">Kelvin</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="TempUnits">Temperature Units</string>
    <string name="MeterSec">Meter / Sec</string>
    <string name="MileHour">Mile / Hour</string>
    <string name="Save">Save</string>
    <string name="GPS">GPS</string>
    <string name="Map">Map</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="Disable">Disable</string>
    <string name="AlertType">Set Alert Type</string>
    <string name="Alarm">Alarm</string>
    <string name="NotificationRB">Notification</string>
    <string name="SetTimeForAlert">Set Time For Alert</string>
    <string name="SetAlert">Set Alert</string>
    <string name="Set">Set</string>
    <string name="DeleteAlarm">Delete Alarm</string>
    <string name="AreYouSure">Are you sure you want to delete this alarm ?</string>
    <string name="EnableInternet">Enable Internet</string>
    <string name="EnableInternetText">No cached Data, Please enable internet</string>
</resources>