<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/icon_home"
            android:title="@string/Home" />
        <item
            android:id="@+id/favoritesFragment"
            android:icon="@drawable/icon_favorite"
            android:title="@string/Favorites" />
        <item
            android:id="@+id/alertsFragment"
            android:icon="@drawable/icon_alarm"
            android:title="@string/Alerts" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/icon_settings"
            android:title="@string/Settings" />
    </group>
</menu>