<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsFragment" >


    <androidx.cardview.widget.CardView
        android:id="@+id/cvSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_gradient_darker">


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimationView"
                android:layout_width="100dp"
                android:layout_height="61dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="settingsanimation.json"
                app:lottie_loop="true" />


            <TextView
                android:id="@+id/textView20001"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_flex"
                android:text="@string/Settings"
                android:textColor="#064040"
                android:textSize="24sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@+id/lottieAnimationView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.617"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/lottieAnimationView" />

            <TextView
                android:id="@+id/textView5"
                style="@style/dailyTextViewItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/Location"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/lottieAnimationView"
                app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />


            <RadioGroup
                android:id="@+id/radioGroupLocation"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="50dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5">

                <RadioButton
                    android:id="@+id/rbGPS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:checked="true"
                    android:text="@string/GPS" />

                <RadioButton
                    android:id="@+id/rbMap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Map" />


            </RadioGroup>

            <TextView
                android:id="@+id/textView20011"
                style="@style/dailyTextViewItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/Language"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />


            <RadioGroup
                android:id="@+id/radioGroupLanguage"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/textView20011"
                app:layout_constraintStart_toStartOf="@+id/radioGroupLocation"
                app:layout_constraintTop_toTopOf="@+id/textView20011">

                <RadioButton
                    android:id="@+id/rbEnglish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:checked="true"
                    android:text="@string/English" />

                <RadioButton
                    android:id="@+id/rbArabic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Arabic" />


            </RadioGroup>


            <TextView
                android:id="@+id/textView2021"
                style="@style/dailyTextViewItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/Notifications"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textView20011"
                app:layout_constraintTop_toBottomOf="@+id/textView20011" />


            <RadioGroup
                android:id="@+id/radioGroupNotifications"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/textView2021"
                app:layout_constraintStart_toStartOf="@+id/radioGroupLanguage"
                app:layout_constraintTop_toTopOf="@+id/textView2021">

                <RadioButton
                    android:id="@+id/rbEnable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:checked="true"
                    android:text="@string/Enable" />

                <RadioButton
                    android:id="@+id/rbDisable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Disable" />


            </RadioGroup>


            <TextView
                android:id="@+id/textView202111"
                style="@style/dailyTextViewItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/TempUnits"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2021" />


            <RadioGroup
                android:id="@+id/radioGroupTempUnits"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/textView202111"
                app:layout_constraintStart_toStartOf="@+id/textView202111"
                app:layout_constraintTop_toBottomOf="@+id/textView202111">

                <RadioButton
                    android:id="@+id/rbC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:checked="true"
                    android:text="@string/Celsius" />

                <RadioButton
                    android:id="@+id/rbK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/Kelvin" />

                <RadioButton
                    android:id="@+id/rbF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Fahrenheit" />


            </RadioGroup>


            <TextView
                android:id="@+id/textView2021111"
                style="@style/dailyTextViewItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/TempUnits"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupTempUnits" />


            <RadioGroup
                android:id="@+id/radioGroupSpeedUnits"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/textView2021111"
                app:layout_constraintStart_toStartOf="@+id/textView2021111"
                app:layout_constraintTop_toBottomOf="@+id/textView2021111">

                <RadioButton
                    android:id="@+id/rbMS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:checked="true"
                    android:text="@string/MeterSec" />

                <RadioButton
                    android:id="@+id/rbMH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:text="@string/MileHour" />


            </RadioGroup>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="#3953A0"
                android:text="@string/Save"
                app:layout_constraintEnd_toEndOf="@+id/radioGroupSpeedUnits"
                app:layout_constraintStart_toStartOf="@+id/radioGroupSpeedUnits"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupSpeedUnits" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>